trying to fix super-tall pics on mobile

--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ body {
 
 .blog-image img {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     margin-bottom: 20px;
 }
 
